Dark Mode: Fix Actionable Message Error Text

--- a/ui/components/ui/actionable-message/index.scss
+++ b/ui/components/ui/actionable-message/index.scss
@@ -119,6 +119,7 @@
 
     .actionable-message__message {
       text-align: left;
+      color: var(--color-error-default);
     }
   }
 
